[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/main_container.tres" type="Theme" id=1]
[ext_resource path="res://scenes/main_container/right_container/shell/shell.gd" type="Script" id=2]
[ext_resource path="res://images/icon_arrow_right.svg" type="Texture" id=3]
[ext_resource path="res://images/icon_arrow_left.svg" type="Texture" id=4]
[ext_resource path="res://scenes/utility/python_watcher/PythonWatcher.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/icon_play.svg" type="Texture" id=6]
[ext_resource path="res://scenes/main_container/right_container/shell/shell_output.gd" type="Script" id=7]
[ext_resource path="res://scenes/utility/code_editor/CodeEditor.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/icon_unlock.svg" type="Texture" id=9]
[ext_resource path="res://images/icon_visibility_visible.svg" type="Texture" id=10]
[ext_resource path="res://images/icon_save.svg" type="Texture" id=11]
[ext_resource path="res://images/icon_pause.svg" type="Texture" id=12]
[ext_resource path="res://scenes/main_container/right_container/shell/save_code/SaveCode.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/main_container/right_container/shell/shell_code.gd" type="Script" id=14]
[ext_resource path="res://images/icon_progress_1.svg" type="Texture" id=15]
[ext_resource path="res://images/icon_progress_4.svg" type="Texture" id=16]
[ext_resource path="res://images/icon_progress_6.svg" type="Texture" id=17]
[ext_resource path="res://images/icon_progress_7.svg" type="Texture" id=18]
[ext_resource path="res://images/icon_progress_8.svg" type="Texture" id=19]
[ext_resource path="res://images/icon_progress_3.svg" type="Texture" id=20]
[ext_resource path="res://images/icon_progress_2.svg" type="Texture" id=21]
[ext_resource path="res://images/icon_progress_5.svg" type="Texture" id=22]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 8
fps = 12.0
frame_0/texture = ExtResource( 15 )
frame_1/texture = ExtResource( 21 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 20 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 16 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 22 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 17 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 18 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 19 )
frame_7/delay_sec = 0.0

[node name="Shell" type="VSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.18921
margin_right = 1.18921
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShellCode" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 14 )

[node name="Menu" type="HBoxContainer" parent="ShellCode"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Run" type="Button" parent="ShellCode/Menu"]
margin_right = 28.0
margin_bottom = 24.0
hint_tooltip = "Execute code"
icon = ExtResource( 6 )
flat = true

[node name="Stop" type="Button" parent="ShellCode/Menu"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 24.0
hint_tooltip = "Stop execution"
icon = ExtResource( 12 )
flat = true

[node name="Save" type="Button" parent="ShellCode/Menu"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 24.0
hint_tooltip = "Save code"
icon = ExtResource( 11 )
flat = true

[node name="Separator" type="HSplitContainer" parent="ShellCode/Menu"]
margin_left = 96.0
margin_right = 912.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Lock" type="Button" parent="ShellCode/Menu"]
margin_left = 916.0
margin_right = 944.0
margin_bottom = 24.0
hint_tooltip = "Lock/Unlock code"
toggle_mode = true
icon = ExtResource( 9 )
flat = true

[node name="Visibility" type="Button" parent="ShellCode/Menu"]
margin_left = 948.0
margin_right = 976.0
margin_bottom = 24.0
hint_tooltip = "Hide/show code"
toggle_mode = true
icon = ExtResource( 10 )
flat = true

[node name="PageSize" type="OptionButton" parent="ShellCode/Menu"]
margin_left = 980.0
margin_right = 1024.0
margin_bottom = 24.0
hint_tooltip = "Page size"
text = "20"
flat = true
items = [ "20", null, false, 0, null, "50", null, false, 1, null, "100", null, false, 2, null, "200", null, false, 3, null, "500", null, false, 4, null, "1000", null, false, 5, null ]
selected = 0

[node name="CodeEditor" parent="ShellCode" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 296.0

[node name="VisibilityWarning" type="Label" parent="ShellCode"]
visible = false
margin_top = 303.0
margin_right = 1024.0
margin_bottom = 325.0
text = "Code may contains sensitive information. Click on eye icon to see the code."
align = 1

[node name="SaveCode" parent="ShellCode" instance=ExtResource( 13 )]
visible = false
margin_top = 40.0
margin_bottom = 340.0

[node name="ShellOutput" type="VBoxContainer" parent="."]
margin_top = 304.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="Menu" type="HBoxContainer" parent="ShellOutput"]
margin_right = 1024.0
margin_bottom = 22.0

[node name="Previous" type="Button" parent="ShellOutput/Menu"]
margin_right = 20.0
margin_bottom = 22.0
hint_tooltip = "Show previous page"
icon = ExtResource( 4 )
flat = true

[node name="PageNumber" type="Label" parent="ShellOutput/Menu"]
margin_left = 24.0
margin_right = 37.0
margin_bottom = 22.0
text = "-"

[node name="Next" type="Button" parent="ShellOutput/Menu"]
margin_left = 41.0
margin_right = 61.0
margin_bottom = 22.0
hint_tooltip = "Show next page"
icon = ExtResource( 3 )
flat = true

[node name="Separator" type="HSplitContainer" parent="ShellOutput/Menu"]
margin_left = 65.0
margin_right = 1004.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Running" type="TextureRect" parent="ShellOutput/Menu"]
margin_left = 1008.0
margin_right = 1024.0
margin_bottom = 22.0
texture = SubResource( 1 )

[node name="Output" parent="ShellOutput" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 296.0
readonly = true

[node name="PythonWatcher" parent="ShellOutput" instance=ExtResource( 5 )]

[connection signal="pressed" from="ShellCode/Menu/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="ShellCode/Menu/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="ShellCode/Menu/Save" to="ShellCode" method="_on_Save_pressed"]
[connection signal="toggled" from="ShellCode/Menu/Lock" to="ShellCode" method="_on_Lock_toggled"]
[connection signal="toggled" from="ShellCode/Menu/Visibility" to="ShellCode" method="_on_Visibility_toggled"]
[connection signal="pressed" from="ShellOutput/Menu/Previous" to="ShellOutput" method="_on_Previous_pressed"]
[connection signal="pressed" from="ShellOutput/Menu/Next" to="ShellOutput" method="_on_Next_pressed"]
[connection signal="output" from="ShellOutput/PythonWatcher" to="ShellOutput" method="_on_PythonWatcher_output"]
